# Research

./: .travis.yml  AnalyzeTextFile.cpp  CMakeLists.txt  README.md  adder32.cpp  adder32.txt  adder32New.txt  mainAdder32.cpp  output.txt
src/: CMakeLists.txt  adder32.txt  analyzeTextFile.cpp  analyzeTextFilev1.2.cpp
